# rwb_hackaton_2026

./: README.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/app/: app_config.py  application.py  base_strategy.py  factory.py  schemas.py
backend/src/app/aggregation/: aggregation.py  base_aggregation.py
backend/src/app/decision_engine/: base_decision.py  decision.py
backend/src/app/depency_injection/: get_application.py
backend/src/app/endpoints/: health_check.py  plan.py  predictions.py
backend/src/app/pipeline/: narabotky.py
backend/src/app/sources/: base_source.py  demo_source.py
backend/src/app/tests/: test_aggregate.py
data/: submission.csv
lm_model/: .gitignore  pyproject.toml
lm_model/src/: config.py  features_adder.py  model.py  model_strategies.py  tables.py
