[project]
name = "model"
version = "0.1.0"
description = "Primitive lm for first hackaton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm",
    "pyarrow",
    "scikit-learn",
    "tabloo",
]

[build-system]
requires = ["setuptools>=68", "wheel"]

[project.scripts]
llm="model:main"

[tool.setuptools.packages.find]
where = ["src"]
